--- a/DemoApp/DemoApp.UserInterface/Siemens.Mom.Presales.Training.DemoApp/modules/Team/TeamScreen-edit.html
+++ b/DemoApp/DemoApp.UserInterface/Siemens.Mom.Presales.Training.DemoApp/modules/Team/TeamScreen-edit.html
@@ -1,6 +1,6 @@
 ﻿<div class="command-bar-side-panel">
-    <button ng-click="vm.cancel()" class="btn side-panel-button">Cancel</button>
-    <button ng-click="vm.save()" class="btn side-panel-button" ng-show="vm.validInputs">Save</button>
+    <button ng-click="vm.cancel()" class="btn side-panel-button">{{'Siemens.Mom.Presales.Training.DemoApp.Cancel' | translate}}</button>
+    <button ng-click="vm.save()" class="btn side-panel-button" ng-show="vm.validInputs">{{'Siemens.Mom.Presales.Training.DemoApp.Save' | translate}}</button>
 </div>
 <div class="side-panel-property-area-body">
     <sit-property-grid sit-id="edit_form"
