--- a/DemoApp/DemoApp.UserInterface/Siemens.Mom.Presales.Training.DemoApp/modules/Team/TeamScreen-list.html
+++ b/DemoApp/DemoApp.UserInterface/Siemens.Mom.Presales.Training.DemoApp/modules/Team/TeamScreen-list.html
@@ -24,6 +24,12 @@
                     sit-tooltip="addPerson"
                     sit-label="AddPerson"
                     ng-show="vm.isButtonVisible"></sit-command>
+        <sit-command svg-icon="common/icons/cmdAssignGroupToRole24.svg"
+                    sit-name="com.siemens.customcommand.taddPerson"
+                    ng-click="vm.taddPersonButtonHandler"
+                    sit-tooltip="addPerson"
+                    sit-label="AddPerson"
+                    ng-show="vm.isButtonVisible"></sit-command>
         <sit-command svg-icon="common/icons/cmdAdd24.svg"
                      sit-name="com.siemens.customcommand.add"
                      ng-click="vm.addButtonHandler"
