--- a/DemoApp/DemoApp.UserInterface/Siemens.Mom.Presales.Training.DemoApp/modules/Team/TeamScreen-list.html
+++ b/DemoApp/DemoApp.UserInterface/Siemens.Mom.Presales.Training.DemoApp/modules/Team/TeamScreen-list.html
@@ -18,12 +18,11 @@
                      ng-click="vm.deleteButtonHandler"
                      sit-label="Delete"
                      ng-show="vm.isButtonVisible"></sit-command>
-         <sit-command svg-icon="common/icons/cmdAssignGroupToRole24.svg"
+         <sit-command svg-icon="common/icons/cmdAddAction24.svg"
                     sit-name="com.siemens.customcommand.addPerson"
                     ng-click="vm.addPersonButtonHandler"
                     sit-tooltip="addPerson"
-                    sit-label="AddPerson"
-                    ng-show="vm.isButtonVisible"></sit-command>
+                    sit-label="AddPerson"></sit-command>
         <sit-command svg-icon="common/icons/cmdAssignGroupToRole24.svg"
                     sit-name="com.siemens.customcommand.taddPerson"
                     ng-click="vm.taddPersonButtonHandler"
