--- a/DemoApp/DemoApp.UserInterface/Siemens.Mom.Presales.Training.DemoApp/modules/Person/PersonScreen-list.html
+++ b/DemoApp/DemoApp.UserInterface/Siemens.Mom.Presales.Training.DemoApp/modules/Person/PersonScreen-list.html
@@ -26,7 +26,7 @@
                      sit-type="main">
                     </sit-command>
     </sit-command-bar>
-    <div id="itemlist" style="width:calc(100% - 56px); height: calc(100% - 16px); padding:16px 16px 0 16px">
+    <div id="PersonitemlistID" style="width:calc(100% - 56px); height: calc(100% - 16px); padding:16px 16px 0 16px">
         <sit-item-collection-viewer sit-data="vm.viewerData" sit-options="vm.viewerOptions"></sit-item-collection-viewer>
     </div>
 </div>
